--- a/app/src/main/res/drawable/rounded_rectangle_button.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_button.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <!-- Inside -->
+    <corners android:radius="20dp"/>
+    <solid android:color="@android:color/black"/>
+
+    <!-- Frame -->
+    <stroke
+        android:width="2dp"
+        android:color="@android:color/white"
+        />
+
+</shape>
